Panel Fix side menu unable to be fully collapsed

--- a/src/panel/style.css
+++ b/src/panel/style.css
@@ -65,7 +65,7 @@
 
     width: calc(var(--side) - 1px);
     max-width: calc(var(--side) - 1px);
-    padding: 10px;
+    padding: min(10px, calc(var(--side) / 2));
 
     display: flex;
     flex-direction: column;
